2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php
	include/graphs/functions_fsgraph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/config_process.php
	include/include_graph_dependencies.php: Merged latest 
	modifications in graph abstraction from pandora including
	ttl (time to live) to graphs when are calling from pdf execution

2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* images/page_white_stack.png: Add new icon to 'copytodefault'
	feature on users audit

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js: Fixed refresh loop
	in massive updates

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug that
	losts the inventory object when massive update

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js
	include/functions_form.php
	operation/incidents/incident_detail.php: Refresh the
	incident list when an incident is updated and when a massive 
	option modifies various incidents
	
	* godmode/setup/setup_visual.php: Fixed a bug of update the block size from
	setup

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_search.php: Added the http link to 
	the incident ID in the incident list like the old version

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Fixed attributes parameter
	to be used into html tag

	* include/functions_form.php: Adapted some functions to
	massive operations

	* include/js/integria_incident_search.js
	operation/incidents/incident.php
	operation/incidents/incident_detail.php
	operation/incidents/incident_search.php: Added massive operations
	into incidents list

2011-06-06  Sancho Lerena <slerena@artica.es>

	* include/help/en/help_auto_incident_close.php: Small text mod.

	* 
