@@ -1,3 +1,9 @@
+2011-06-15 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/graphs/functions_pchart.php: Adding homedir to radar, kiviat 
+	and polar graphs.
+	* include/graphs/fgraph.php: Setting temp serialize files to true.
+
 2011-06-14  Sergio Martin <sergio.martin@artica.es>
 
 	* include/graphs/functions_pchart.php
